electron-pjsip/node-gyp-debug.log
gyp info it worked if it ends with ok
gyp verb cli [
gyp verb cli '/opt/homebrew/Cellar/node/23.11.0/bin/node',
gyp verb cli '/opt/homebrew/bin/node-gyp',
gyp verb cli 'rebuild',
gyp verb cli '--verbose'
gyp verb cli ]
gyp info using node-gyp@11.2.0
gyp info using node@23.11.0 | darwin | arm64
gyp verb clean removing "build" directory
gyp verb find Python Python is not set from command line or npm configuration
gyp verb find Python Python is not set from environment variable PYTHON
gyp verb find Python checking if "python3" can be used
gyp verb find Python - executing "python3" to get executable path
gyp verb find Python - executable path is "/opt/homebrew/opt/python@3.13/bin/python3.13"
gyp verb find Python - executing "/opt/homebrew/opt/python@3.13/bin/python3.13" to get version
gyp verb find Python - version is "3.13.3"
gyp info find Python using Python version 3.13.3 found at "/opt/homebrew/opt/python@3.13/bin/python3.13"
gyp verb get node dir no --target version specified, falling back to host node version: 23.11.0

gyp verb install input version string "23.11.0"
gyp verb install installing version: 23.11.0
gyp verb install --ensure was passed, so won't reinstall if already installed
gyp verb install version is already installed, need to check "installVersion"
gyp verb got "installVersion" 11
gyp verb needs "installVersion" 11
gyp verb install version is good
gyp verb get node dir target node version installed: 23.11.0
gyp verb build dir attempting to create "build" dir: /Users/mac/Data/Projects/PJSIP/electron-pjsip/build
gyp verb build dir "build" dir needed to be created? Yes
gyp verb build/config.gypi creating config file
gyp verb build/config.gypi writing out config file: /Users/mac/Data/Projects/PJSIP/electron-pjsip/build/config.gypi
gyp verb config.gypi checking for gypi file: /Users/mac/Data/Projects/PJSIP/electron-pjsip/config.gypi
gyp verb common.gypi checking for gypi file: /Users/mac/Data/Projects/PJSIP/electron-pjsip/common.gypi
gyp verb gyp gyp format was not specified; forcing "make"
gyp info spawn /opt/homebrew/opt/python@3.13/bin/python3.13
gyp info spawn args [
gyp info spawn args '/opt/homebrew/lib/node_modules/node-gyp/gyp/gyp_main.py',
gyp info spawn args 'binding.gyp',
gyp info spawn args '-f',
gyp info spawn args 'make',
gyp info spawn args '-I',
gyp info spawn args '/Users/mac/Data/Projects/PJSIP/electron-pjsip/build/config.gypi',
gyp info spawn args '-I',
gyp info spawn args '/opt/homebrew/lib/node_modules/node-gyp/addon.gypi',
gyp info spawn args '-I',
gyp info spawn args '/Users/mac/Library/Caches/node-gyp/23.11.0/include/node/common.gypi',
gyp info spawn args '-Dlibrary=shared_library',
gyp info spawn args '-Dvisibility=default',
gyp info spawn args '-Dnode_root_dir=/Users/mac/Library/Caches/node-gyp/23.11.0',
gyp info spawn args '-Dnode_gyp_dir=/opt/homebrew/lib/node_modules/node-gyp',
gyp info spawn args '-Dnode_lib_file=/Users/mac/Library/Caches/node-gyp/23.11.0/<(target_arch)/node.lib',
gyp info spawn args '-Dmodule_root_dir=/Users/mac/Data/Projects/PJSIP/electron-pjsip',
gyp info spawn args '-Dnode_engine=v8',
gyp info spawn args '--depth=.',
gyp info spawn args '--no-parallel',
gyp info spawn args '--generator-output',
gyp info spawn args 'build',
gyp info spawn args '-Goutput_dir=.'
gyp info spawn args ]
gyp verb build type Release
gyp verb architecture arm64
gyp verb node dev dir /Users/mac/Library/Caches/node-gyp/23.11.0
gyp verb python /opt/homebrew/opt/python@3.13/bin/python3.13
gyp verb `which` succeeded for `make` /usr/bin/make
gyp verb bin symlinks created symlink to "/opt/homebrew/opt/python@3.13/bin/python3.13" in "/Users/mac/Data/Projects/PJSIP/electron-pjsip/build/node_gyp_bins" and added to PATH
gyp info spawn make
gyp info spawn args [ 'V=1', 'BUILDTYPE=Release', '-C', 'build' ]
  cc -o Release/obj.target/nothing/node_modules/node-addon-api/nothing.o ../node_modules/node-addon-api/nothing.c '-DNODE_GYP_MODULE_NAME=nothing' '-DUSING_UV_SHARED=1' '-DUSING_V8_SHARED=1' '-DV8_DEPRECATION_WARNINGS=1' '-D_GLIBCXX_USE_CXX11_ABI=1' '-D_DARWIN_USE_64_BIT_INODE=1' '-D_LARGEFILE_SOURCE' '-D_FILE_OFFSET_BITS=64' -I/Users/mac/Library/Caches/node-gyp/23.11.0/include/node -I/Users/mac/Library/Caches/node-gyp/23.11.0/src -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/openssl/config -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/openssl/openssl/include -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/uv/include -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/zlib -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/v8/include  -O3 -gdwarf-2 -fno-strict-aliasing -flto -mmacosx-version-min=11.0 -arch arm64 -Wall -Wendif-labels -W -Wno-unused-parameter  -MMD -MF ./Release/.deps/Release/obj.target/nothing/node_modules/node-addon-api/nothing.o.d.raw   -c
  rm -f Release/nothing.a && /opt/homebrew/opt/python@3.13/bin/python3.13 gyp-mac-tool filter-libtool libtool  -static -o Release/nothing.a Release/obj.target/nothing/node_modules/node-addon-api/nothing.o
warning: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/libtool: archive library: Release/nothing.a the table of contents is empty (no object file members in the library define global symbols)
  c++ -o Release/obj.target/pjsip/src/pjsip_binding.o ../src/pjsip_binding.cc '-DNODE_GYP_MODULE_NAME=pjsip' '-DUSING_UV_SHARED=1' '-DUSING_V8_SHARED=1' '-DV8_DEPRECATION_WARNINGS=1' '-D_GLIBCXX_USE_CXX11_ABI=1' '-D_DARWIN_USE_64_BIT_INODE=1' '-D_LARGEFILE_SOURCE' '-D_FILE_OFFSET_BITS=64' '-DNAPI_CPP_EXCEPTIONS' '-DPJ_IS_LITTLE_ENDIAN=1' '-DPJ_IS_BIG_ENDIAN=0' '-DBUILDING_NODE_EXTENSION' -I/Users/mac/Library/Caches/node-gyp/23.11.0/include/node -I/Users/mac/Library/Caches/node-gyp/23.11.0/src -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/openssl/config -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/openssl/openssl/include -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/uv/include -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/zlib -I/Users/mac/Library/Caches/node-gyp/23.11.0/deps/v8/include -I/Users/mac/Data/Projects/PJSIP/electron-pjsip/node_modules/node-addon-api -I../../pjproject-2.15.1/pjlib/include -I../../pjproject-2.15.1/pjlib-util/include -I../../pjproject-2.15.1/pjmedia/include -I../../pjproject-2.15.1/pjsip/include -I../../pjproject-2.15.1/pjnath/include  -O3 -gdwarf-2 -fno-strict-aliasing -flto -mmacosx-version-min=15.0 -arch arm64 -Wall -Wendif-labels -W -Wno-unused-parameter -std=gnu++20 -stdlib=libc++ -fno-rtti -MMD -MF ./Release/.deps/Release/obj.target/pjsip/src/pjsip_binding.o.d.raw   -c
In file included from ../src/pjsip_binding.cc:2:
In file included from ../../pjproject-2.15.1/pjsip/include/pjsua-lib/pjsua.h:29:
In file included from ../../pjproject-2.15.1/pjsip/include/pjsip.h:23:
In file included from ../../pjproject-2.15.1/pjsip/include/pjsip/sip_types.h:33:
In file included from ../../pjproject-2.15.1/pjsip/include/pjsip/sip_config.h:26:
In file included from ../../pjproject-2.15.1/pjlib/include/pj/types.h:33:
In file included from ../../pjproject-2.15.1/pjlib/include/pj/limits.h:27:
../../pjproject-2.15.1/pjlib/include/pj/compat/limits.h:38:4: warning: "limits.h is not found or not supported. LONG_MIN and LONG_MAX "            "will be defined by the library in pj/compats/limits.h and "           "overridable in config_site.h" [-W#warnings]
   38 | #  warning "limits.h is not found or not supported. LONG_MIN and LONG_MAX " \
      |    ^
../src/pjsip_binding.cc:270:5: error: expected unqualified-id
  270 |     if (status_dev_info == PJ_SUCCESS) {
      |     ^
../src/pjsip_binding.cc:272:7: error: expected unqualified-id
  272 |     } else {
      |       ^
../src/pjsip_binding.cc:275:1: error: extraneous closing brace ('}')
  275 | }
      | ^
1 warning and 3 errors generated.
make: *** [Release/obj.target/pjsip/src/pjsip_binding.o] Error 1
gyp ERR! build error 
gyp ERR! stack Error: `make` failed with exit code: 2
gyp ERR! stack at ChildProcess.<anonymous> (/opt/homebrew/lib/node_modules/node-gyp/lib/build.js:219:23)
gyp ERR! System Darwin 24.5.0
gyp ERR! command "/opt/homebrew/Cellar/node/23.11.0/bin/node" "/opt/homebrew/bin/node-gyp" "rebuild" "--verbose"
gyp ERR! cwd /Users/mac/Data/Projects/PJSIP/electron-pjsip
gyp ERR! node -v v23.11.0
gyp ERR! node-gyp -v v11.2.0
gyp ERR! not ok 
